# VMZ-Wiki-Automation

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  需求文档 Dify版本.md  需求文档.md
.github/workflows/: ci.yml
k8s/: cleanup.sh  database.yaml  deploy.sh  deployment.yaml  namespace.yaml  services.yaml
output/transcripts/: test.json
src/: main.py
src/collectors/: video.py
src/filters/: video.py
src/generators/: markdown.py
src/managers/: database.py  storage.py
src/processors/: audio.py  speech.py  task.py
templates/: index.md.j2  video.md.j2
tests/: conftest.py
tests/e2e/: test_end_to_end.py
tests/fixtures/templates/: test_template.md  video.md.j2
tests/integration/: test_video_processing.py
tests/unit/: test_audio_processor.py  test_database_manager.py  test_markdown_generator.py  test_speech_recognizer.py  test_storage_manager.py  test_task_manager.py  test_video_collector.py  test_video_filter.py
